// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing CustomInputLabel Component renders correctly when theme not provided 1`] = `
.emotion-0 {
  color: rgba(29, 34, 39, 0.54);
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.4375em;
  letter-spacing: 0.00938em;
  padding: 0;
  display: block;
  transform-origin: top left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  margin-top: -12%;
  font-weight: 600;
  color: rgba(1, 102, 255, 1);
}

.emotion-0.Mui-focused {
  color: rgba(1, 102, 255, 1);
}

.emotion-0.Mui-disabled {
  color: rgba(29, 34, 39, 0.38);
}

.emotion-0.Mui-error {
  color: #f44336;
}

.emotion-0.Mui-disabled {
  color: rgba(1, 102, 255, 1);
  opacity: 0.38;
}

.emotion-0 .label-asterisk {
  vertical-align: sub;
}

<label
  className="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary emotion-0"
>
  Create a question
</label>
`;

exports[`Snapshot testing CustomInputLabel Component renders correctly with default props 1`] = `
.emotion-0 {
  color: rgba(29, 34, 39, 0.54);
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.4375em;
  letter-spacing: 0.00938em;
  padding: 0;
  display: block;
  transform-origin: top left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  margin-top: 1%;
  font-weight: 600;
  color: rgba(1, 102, 255, 1);
}

.emotion-0.Mui-focused {
  color: rgba(1, 102, 255, 1);
}

.emotion-0.Mui-disabled {
  color: rgba(29, 34, 39, 0.38);
}

.emotion-0.Mui-error {
  color: #f44336;
}

.emotion-0.Mui-disabled {
  color: rgba(1, 102, 255, 1);
  opacity: 0.38;
}

.emotion-0 .label-asterisk {
  vertical-align: sub;
}

<label
  className="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary emotion-0"
  marginTop="1%"
>
  Create a question
</label>
`;
